Add design and GitHub links for Photobooth project

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                   <h3><a href="https://www.ucdavis.edu">University of California, Davis</a></h3>
                   <p class="info">Bachelor of Science in <a href="http://www.cs.ucdavis.edu/">Computer Science</a> and Minor in <a href="https://statistics.ucdavis.edu/">Statistics</a><span>&bull;</span><em class="date">June 2018</em></p>
-                  <p>Cumulative GPA: 3.586</p>
+                  <p>Cumulative GPA: 3.5</p>
                   <p>College of Letters and Science Dean’s Honor List Fall 2014, Winter 2017, and Spring 2018.</p>
                   <p>
                     Courses I've taken (in chronological order): Object Oriented Programming (C++), Machine Dependent Programming (x86 assembly), Data Structures, Theory of Computation, Computer Architecture, Algorithm Design, Database Systems, Operating Systems, Computer Networks, Information Interfaces (D3.js), Web Programming, Natural Language Processing (NLP), and Statistical Data Science (R).
@@ -286,12 +286,14 @@
                     This site is implemented using HTML, CSS, JavaScript, and Node.js.
                     Node modules used include Express and SQLite.
                     Collaborated with <a href="https://www.linkedin.com/in/bryan-kim-89800bb8">Bryan Kim</a> and <a href="https://www.linkedin.com/in/jason-hui-6a132099">Jason Hui</a>.
-                    Design courtesy of Dani Macedo.
+                    <a href="photobooth.pdf">Design</a> courtesy of Dani Macedo.
                   </p>
                   <p>
                     <a href="https://maythird.ddns.net/photobooth">Click here to try it out!</a>
                     Please be aware that there is currently no functionality for the user to delete photos that have been uploaded, so please only upload appropriate pictures that you are fine with being viewed publicly.
                   </p>
+                  <p><a href="https://github.com/kerbinlee/Photobooth">View Source Code on GitHub</a></p>
+
                </div>
 
             </div> <!-- item end -->
