Minor edits and fixes

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">I'm Kevin Lee.</h1>
-            <h3><span>Software Developer</span></h3>
+            <h3><span>Software Engineer</span></h3>
             <hr />
             <ul class="social">
                <li><a href="mailto:lee.kevin@yahoo.com"><i class="fa fa-envelope"></i></a></li>
@@ -99,7 +99,7 @@
             <p>
               Welcome to my website!
               I'm a recent graduate from UC Davis with a bachelor's degree in Computer Science and a minor in Statistics.
-              I am currently seeking a full-time software developer position, preferably in the Greater Sacramento area.
+              I am currently seeking a full-time software engineer position.
               I am experienced with programming in Java, but I also have some experience with C, C++, HTML, CSS, JavaScript, R, Python, and Bash shell scripting.
               Check out my work experience and projects below!
             </p>
@@ -229,7 +229,7 @@
                <div class="twelve columns">
 
                   <h3><a href="https://github.com/kerbinlee/CanvasDriveSync">Canvas - Google Drive Sync</a></h3>
-                  <p class="info"><em class="date">Decempber 2017 - January 2018</em></p>
+                  <p class="info"><em class="date">December 2017 - January 2018</em></p>
 
                   <p>
                   A Google Chrome extension that I built during my winter break to list instructor uploaded files from UC Davis' <a href="https://www.canvaslms.com/">Canvas LMS</a>.
@@ -256,7 +256,7 @@
                   An Android port of <a href="https://www.blizzard.com/">Blizzard Entertainment</a>'s <a href="http://us.blizzard.com/en-us/games/legacy/">Warcraft II: Tides of Darkness</a>.
                   This app was a project for <a href="https://csiflabs.cs.ucdavis.edu/~cjnitta/">Professor Christopher Nitta</a>'s Software Engineering course (ECS160), and is based on his Linux port of the game written in C++.
                   I was primarily responsible for implementing the camera, menu screens, and button layout.
-                  Utilized Java, <a href="https://libgdx.badlogicgames.com/">libGDX</a> (a Java framework for cross-platform game development), and Android Studio (Built on IntelliJ IDEA).
+                  Utilized Java, <a href="https://libgdx.badlogicgames.com/">libGDX</a> (a Java framework for cross-platform game development), and Android Studio (built on IntelliJ IDEA).
                   Contributors for this project are AJ Collins (Team Lead), Hung Mai, Ian Skebba, Kevin Ow, Kim Dang, Kimi Tanaka, Manohar Boppana, Sally Ly, Sasha Sirovica, and Sven Olson.
                   </p>
                   <p>
@@ -290,7 +290,7 @@
                   </p>
                   <p>
                     <a href="https://maythird.ddns.net/photobooth">Click here to try it out!</a>
-                    Please be aware that there is currently no functionality for the user to delete photos that have been uploaded, so please only upload appropriate pictures that you are fine with being viewed publicly.
+                    Please be aware that there is no ability to delete photos that have been uploaded, so please only upload appropriate pictures that you are fine with being viewed publicly.
                   </p>
                   <p><a href="https://github.com/kerbinlee/Photobooth">View Source Code on GitHub</a></p>
 
