--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
 	================================================== -->
 	<link rel="shortcut icon" href="favicon.png" >
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134161901-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-134161901-1');
+    </script>
 </head>
 
 <body>
