Update with new position and ssh-map project

--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@
 
             <p>
               Welcome to my website!
-              I'm a recent graduate from UC Davis with a bachelor's degree in Computer Science and a minor in Statistics.
-              I am currently seeking a full-time software engineer position.
-              I am experienced with programming in Java, but I also have some experience with C, C++, HTML, CSS, JavaScript, R, Python, and Bash shell scripting.
+              I'm a Software Developer at Lawrence Livermore National Laboratory (LLNL).
+              I am experienced with programming in Java, but I also have some experience with C, C++, HTML, CSS, JavaScript, SQL, Python, Docker, and Bash shell scripting.
               Check out my work experience and projects below!
             </p>
 
@@ -140,7 +139,6 @@
 
                   <h3><a href="https://www.ucdavis.edu">University of California, Davis</a></h3>
                   <p class="info">Bachelor of Science in <a href="http://www.cs.ucdavis.edu/">Computer Science</a> and Minor in <a href="https://statistics.ucdavis.edu/">Statistics</a><span>&bull;</span><em class="date">June 2018</em></p>
-                  <p>Cumulative GPA: 3.5</p>
                   <p>College of Letters and Science Dean’s Honor List Fall 2014, Winter 2017, and Spring 2018.</p>
                   <p>
                     Courses I've taken (in chronological order): Object Oriented Programming (C++), Machine Dependent Programming (x86 assembly), Data Structures, Theory of Computation, Computer Architecture, Algorithm Design, Database Systems, Operating Systems, Computer Networks, Information Interfaces (D3.js), Web Programming, Natural Language Processing (NLP), and Statistical Data Science (R).
@@ -169,13 +167,32 @@
 
                <div class="twelve columns">
 
-                  <h3>Undergraduate Research Assistant</h3>
-                  <p class="info"><a href="https://decallab.cs.ucdavis.edu/">UC Davis DECAL Lab</a> <span>&bull;</span> <em class="date">January 2018 - Present</em></p>
+                  <h3>Software Developer</h3>
+                  <p class="info"><a href="https://www.llnl.gov/">Lawrence Livermore National Laboratory (LLNL)</a> <span>&bull;</span> <em class="date">April 2019 - Present</em></p>
 
                   <p>
-                  I am currently working with <a href="http://web.cs.ucdavis.edu/~devanbu/">Professor Prem Devanbu</a> and <a href="https://caseycas.github.io/">Casey Casalnuovo</a> at the <a href="https://decallab.cs.ucdavis.edu/">UC Davis DECAL Lab</a> to assist in determining whether there is a natural, repetitive way in which developers write expressions in code.
-                  I am doing so by developing a Java program to transform existing code from open source Java projects using the Abstract Syntax Tree parser from the Eclipse Java Development Tools.
+                  I currently develop 2 web applications that enusre the quality and safety of critical scientific research programs at LLNL. I work on Full Stack web development using Java EE, Oracle SQL, HTML, CSS, JSF, and Payara Server.
+                  I am actively involved in all aspects of the software development lifecycle from gathering user requirements; software design, development and testing; to maintenance. 
+                  I also mentor new employees through the Computing Ambassador Program to help new hires comfortably navigate LLNL's complex environment.
+                  </p>
+
+               </div>
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
+                  <h3>Undergraduate Research Assistant</h3>
+                  <p class="info"><a href="https://decallab.cs.ucdavis.edu/">UC Davis DECAL Lab</a> <span>&bull;</span> <em class="date">February 2018 - February 2019</em></p>
+
+                  <p>
+                  I worked with <a href="http://web.cs.ucdavis.edu/~devanbu/">Professor Prem Devanbu</a> and <a href="https://caseycas.github.io/">Casey Casalnuovo</a> at the <a href="https://decallab.cs.ucdavis.edu/">UC Davis DECAL Lab</a> to assist in determining whether there is a natural, repetitive way in which developers write expressions in code.
+                  I achieved this by developing a Java program to programatically transform existing code from open source Java projects using the Abstract Syntax Tree parser from the <a href="https://www.eclipse.org/jdt/">Eclipse Java Development Tools</a>.
                   I also incorporated a <a href="https://github.com/SLP-team/SLP-Core">Software Language Processing (SLP) library</a> developed by <a href="http://vhellendoorn.github.io/">Vincent Hellendoorn</a> to obtain statistical data for analysis.
+                  The data I collected were presented at the NL4SE Workshop at FSE 2018 (<a href="https://caseycas.github.io/pub/papers/semantictransformation.pdf">Is “Naturalness" a result of deliberate choice?</a>, <a href="https://caseycas.github.io/pub/slides/SemanticTransformation.pdf">Presentation</a>) and a resulting paper <a href="https://caseycas.github.io/pub/papers/preference_arvix.pdf">Do People Prefer “Natural” code?</a> is pending submission to <a href="https://onlinelibrary.wiley.com/journal/15516709">Cognitive Science</a>.
+
                   </p>
 
                </div>
@@ -187,32 +204,14 @@
                <div class="twelve columns">
 
                   <h3>Programmer Intern</h3>
-                  <p class="info"><a href="https://www.ragingwire.com/">RagingWire Data Centers</a> <span>&bull;</span> <em class="date">June 2017 - September 2017</em></p>
+                  <p class="info"><a href="https://www.ragingwire.com/">NTT Global Data Centers (formerly RagingWire Data Centers)</a> <span>&bull;</span> <em class="date">June 2017 - September 2017</em></p>
 
                   <p>
-                  I worked as a Programmer Intern at RagingWire Data Centers in Sacramento where I contributed to the company’s web portal that was used by employees and clients.
-                  I worked primarily with back-end development using Java Enterprise Edition to integrate with an Oracle SQL database.
-                  My primary task involved converting existing SQL Stored Procedure calls to use the Java Persistence API (JPA).
-                  I also worked on a project where I implemented a timer event handler to email appropriate personnel when pre-determined conditions are met.
+                  I was a Programmer Intern at RagingWire Data Centers in Sacramento where I contributed to a web application that was used by employees and clients.
+                  Going in with little experience, I quickly learned Java and SQL and began making meaingful contributions to back-end development within 2 weeks.
+                  My primary task involved converting existing SQL Stored Procedures to use the Java Persistence API (JPA).
+                  I was the sole developer for a new automated email notification feature that had to be implemented on a short time frame.
                   This internship exposed me to various software development tools including Confluence, Jenkins, JIRA, Maven, NetBeans IDE, Oracle SQL Developer, Payara, and SVN.
-                  </p>
-
-               </div>
-
-            </div> <!-- item end -->
-
-            <div class="row item">
-
-               <div class="twelve columns">
-
-                  <h3>Food Service Worker</h3>
-                  <p class="info"><a href="http://housing.ucdavis.edu/dining/locations/dining-commons/tercero/">UC Davis Tercero Dining Commons</a> <span>&bull;</span> <em class="date">October 2015 - June 2018</em></p>
-
-                  <p>
-                  I was a student food service worker at UC Davis' Tercero Dining Commons where I was responsible for various tasks including serving food, cashiering, and providing customer service.
-                  I worked as part of a team of student workers to serve over 1,000 customers during each meal shift while following procedures to maintain sanitary food practices, cleanliness, and a safe work environment.
-                  I have also trained new employees in various tasks while providing advice based on my prior experience.
-                  In Fall of 2016, I was recognized for achieving 600 out of 2000 meal donations for the Swipe Out Hunger campaign while cashiering.
                   </p>
 
                </div>
@@ -237,13 +236,66 @@
 
                <div class="twelve columns">
 
+                  <h3><a href="https://github.com/kerbinlee/ssh-map">SSH Map</a></h3>
+                  <p class="info"><em class="date">April 2020 - May 2020</em></p>
+
+                  <p>
+                  A mini application mapping the location of IP addresses performing brute-force attacks on the SSH protocol.
+                  IP addresses are parsed from Linux auth.log* files and geographic data is obtained from <a href="https://www.keycdn.com/api">KeyCDN's API</a>.
+                  Built using Python, Flask, Redis, and Leaflet maps.
+                  </p>
+                  <p><a href="https://github.com/kerbinlee/ssh-map">View Source Code on GitHub</a></p>
+
+               </div>
+
+               <!-- portfolio-wrapper -->
+               <div id="ssh-map-portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+
+                  <div class="columns portfolio-item">
+                     <div class="item-wrap">
+
+                        <a href="#ssh-map-modal-01" title="">
+                           <img alt="" src="images/portfolio/ssh-map/ssh-map.png">
+                           <div class="overlay">
+                              <div class="portfolio-item-meta">
+                                       <h5>SSH Map</h5>
+                                 <p></p>
+                              </div>
+                           </div>
+                        </a>
+
+                     </div>
+                  </div> <!-- item end -->
+
+               </div> <!-- portfolio-wrapper end -->
+
+               <div id="ssh-map-modal-01" class="popup-modal mfp-hide">
+
+                  <img class="scale-with-grid" src="images/portfolio/ssh-map/ssh-map.png" alt="" />
+
+                  <div class="description-box">
+                     <h4>SSH Map</h4>
+                  </div>
+
+                  <div class="link-box">
+                        <a class="popup-modal-dismiss">Close</a>
+                  </div>
+
+               </div><!-- modal-01 End -->
+
+            </div> <!-- item end -->
+
+            <div class="row item">
+
+               <div class="twelve columns">
+
                   <h3><a href="https://github.com/kerbinlee/CanvasDriveSync">Canvas - Drive Sync</a></h3>
                   <p class="info"><em class="date">December 2017 - January 2018</em></p>
 
                   <p>
                   A Google Chrome extension that I built during my winter break to list instructor uploaded files from UC Davis' <a href="https://www.canvaslms.com/">Canvas LMS</a>.
-                  The goal of this extension was to provide an alternate interface to quickly browse files for a course.
-                  This allowed for the ability to easily open files such as PDFs and images natively in the browser as new tabs, which was not possible through the Canvas LMS user interface.
+                  The extension provides an interface to quickly browse files for a course.
+                  This allows for the ability to easily open files such as PDFs and images natively in the browser as new tabs, which was not possible through the Canvas LMS user interface.
                   The extension also integrates with Google Drive to allow files to be synced from Canvas LMS to Google Drive.
                   I built this extension using HTML, CSS, and JavaScript.
                   Data is obtained via REST APIs of Canvas LMS and Google Drive.
@@ -263,9 +315,9 @@
 
                   <p>
                   An Android port of <a href="https://www.blizzard.com/">Blizzard Entertainment</a>'s <a href="http://us.blizzard.com/en-us/games/legacy/">Warcraft II: Tides of Darkness</a>.
-                  This app was a project for <a href="https://csiflabs.cs.ucdavis.edu/~cjnitta/">Professor Christopher Nitta</a>'s Software Engineering course (ECS160), and is based on his Linux port of the game written in C++.
+                  This app was a project for <a href="https://csiflabs.cs.ucdavis.edu/~cjnitta/">Professor Christopher Nitta</a>'s Software Engineering course, and is based on his Linux port of the game written in C++.
                   I was primarily responsible for implementing the camera, menu screens, and button layout.
-                  Utilized Java, <a href="https://libgdx.badlogicgames.com/">libGDX</a> (a Java framework for cross-platform game development), and Android Studio (built on IntelliJ IDEA).
+                  Utilized Java, <a href="https://libgdx.badlogicgames.com/">libGDX</a> (a Java framework for cross-platform game development), and Android Studio.
                   Contributors for this project are AJ Collins (Team Lead), Hung Mai, Ian Skebba, Kevin Ow, Kim Dang, Kimi Tanaka, Manohar Boppana, Sally Ly, Sasha Sirovica, and Sven Olson.
                   </p>
                   <p>
@@ -274,7 +326,6 @@
                     Please note that the map will start all black.
                     Simply zoom out to find the peasant.
                     Buttons on the side bar during game play need to be held down while being used.
-                    Please feel free to email me if you would like to take a look at the source code.
                   </p>
 
                     <!-- portfolio-wrapper -->
@@ -426,11 +477,12 @@
                <div class="twelve columns">
 
                   <h3><a href="https://maythird.ddns.net/photobooth">Photobooth</a></h3>
-                  <p class="info"><em class="date">April 2017 - June 2017</em></p>
+                  <p class="info"><em class="date">April 2017 - June 2017, May 2020 - Present</em></p>
 
                   <p>
                     My first web application!
-                    Developed as part of <a href="http://web.cs.ucdavis.edu/~amenta/">Professor Nina Amenta</a>'s Web Programming Course (ECS162, formerly ECS189H), it allows users to upload pictures and automatically generate tags based on the image content, which is powered by <a href="https://cloud.google.com/vision/">Google's Cloud Vision API</a>.
+                    I am currently refactoring this project as an opportunity to learn React and Single Page Applications.
+                    Originally developed as part of <a href="http://web.cs.ucdavis.edu/~amenta/">Professor Nina Amenta</a>'s Web Programming Course, it allows users to upload pictures and automatically generate tags based on the image content, which is powered by <a href="https://cloud.google.com/vision/">Google's Cloud Vision API</a>.
                     Users can also delete, edit, or add tags (up to 10); filter by tags; and mark their favorite photos.
                     This site is implemented using HTML, CSS, JavaScript, and Node.js.
                     Node modules used include Express and SQLite.
@@ -459,7 +511,7 @@
                   <p>
                     A simple web page that displays current weather conditions and a 10-day forecast (on desktop only).
                     The data defaults to Davis, CA, but can be changed by searching a Zip Code or City name.
-                    Also developed as part of <a href="http://web.cs.ucdavis.edu/~amenta/">Professor Nina Amenta</a>'s Web Programming Course (ECS162, formerly ECS189H).
+                    Also developed as part of <a href="http://web.cs.ucdavis.edu/~amenta/">Professor Nina Amenta</a>'s Web Programming Course.
                     Weather data provided by <a href="https://developer.yahoo.com/weather/">Yahoo! Weather API.</a>
                     Assets and <a href="weatherApp/WeatherAppDesignSimplified.pdf">design</a> courtesy of Dani Macedo.
                   </p>
@@ -481,7 +533,7 @@
 
                   <p>
                     A web page that utilizes the <a href="https://d3js.org/">Data Driven Documents JavaScript library (D3.js)</a> to visualize energy consumption in the United States in 2010-2014.
-                    Developed as part of Chris Bryan's Information Interfaces Course (ECS163).
+                    Developed as part of Chris Bryan's Information Interfaces Course.
                     Collaborated with Aniss Bakhshi, Manohar Boppana, and Mathew Le.
                     Data courtesy of U.S. Government, downloaded from <a href="https://www.kaggle.com/lislejoem/us_energy_census_gdp_10-14/home">Kaggle</a>.
                   </p>
