Clean up old links

--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                <li><a href="https://github.com/kerbinlee"><i class="fa fa-github"></i></a></li>
             </ul>
             <hr />
-            <p>
-               <a href="https://ucdavis365-my.sharepoint.com/:b:/g/personal/kllee_ucdavis_edu/EYUsEsEUP2tDgUWbIa1drckBxJPM5AGyOBeljDiMYtC1UQ?e=fgcApd" class="button"><i class="fa fa-file"></i> View My Resume</a>
+            <!-- <p>
+               <a href="#" class="button"><i class="fa fa-file"></i> View My Resume</a>
             </p>
             <p>
                <a href="mailto:lee.kevin@yahoo.com" class="button"><i class="fa fa-envelope"></i> Email Me</a>
-            </p>
+            </p> -->
          </div>
       </div>
 
@@ -108,8 +108,8 @@
             <p>
               Welcome to my website!
               I'm a Software Developer at Lawrence Livermore National Laboratory (LLNL).
-              I am experienced with programming in Java, but I also have some experience with C, C++, HTML, CSS, JavaScript, SQL, Python, Docker, and Bash shell scripting.
-              Check out my work experience and projects below!
+              I am experienced with web application development using Java, HTML, CSS, and SQL. I have also worked with Python C, C++, JavaScript, Docker, ReactJS, and Bash shell scripting.
+              Check out my work experience and past projects below!
             </p>
 
          </div> <!-- end .main-col -->
@@ -143,7 +143,7 @@
                   <p>
                     Courses I've taken (in chronological order): Object Oriented Programming (C++), Machine Dependent Programming (x86 assembly), Data Structures, Theory of Computation, Computer Architecture, Algorithm Design, Database Systems, Operating Systems, Computer Networks, Information Interfaces (D3.js), Web Programming, Natural Language Processing (NLP), and Statistical Data Science (R).
                   </p>
-                  <p>Member of the <a href="https://daviscsclub.org/">Davis Computer Science Club</a>.</p>
+                  <!-- <p>Member of the <a href="http://www.daviscsclub.com/">Davis Computer Science Club</a>.</p> -->
                </div>
 
             </div> <!-- item end -->
@@ -476,7 +476,7 @@
 
                <div class="twelve columns">
 
-                  <h3><a href="https://maythird.ddns.net/photobooth">Photobooth</a></h3>
+                  <h3><a href="https://github.com/kerbinlee/Photobooth">Photobooth</a></h3>
                   <p class="info"><em class="date">April 2017 - June 2017, May 2020 - Present</em></p>
 
                   <p>
@@ -489,12 +489,12 @@
                     Collaborated with <a href="https://www.linkedin.com/in/bryan-kim-89800bb8">Bryan Kim</a> and <a href="https://www.linkedin.com/in/jason-hui-6a132099">Jason Hui</a>.
                     Assets and <a href="photobooth.pdf">design</a> courtesy of Dani Macedo.
                   </p>
-                  <p>
+                  <!-- <p>
                     <a href="https://maythird.ddns.net/photobooth">Click here to try it out!</a>
                   </p>
                   <p>
                     Please be aware that there is no ability to delete photos that have been uploaded, so please only upload appropriate pictures that you are fine with being viewed publicly.
-                  </p>
+                  </p> -->
                   <p><a href="https://github.com/kerbinlee/Photobooth">View Source Code on GitHub</a></p>
 
                </div>
@@ -505,7 +505,7 @@
 
                <div class="twelve columns">
 
-                  <h3><a href="weatherApp/">Weather App</a></h3>
+                  <h3>Weather App</h3>
                   <p class="info"><em class="date">April 2017</em></p>
 
                   <p>
@@ -515,9 +515,9 @@
                     Weather data provided by <a href="https://developer.yahoo.com/weather/">Yahoo! Weather API.</a>
                     Assets and <a href="weatherApp/WeatherAppDesignSimplified.pdf">design</a> courtesy of Dani Macedo.
                   </p>
-                  <p>
+                  <!-- <p>
                     <a href="weatherApp/">Click here to try it out!</a>
-                  </p>
+                  </p> -->
 <!--                  <p><a href="https://github.com/kerbinlee/">View Source Code on GitHub</a></p>-->
 
                </div>
@@ -528,7 +528,7 @@
 
                <div class="twelve columns">
 
-                  <h3><a href="https://maythird.ddns.net/d3project/">Energy Consumption Visualizations</a></h3>
+                  <h3>Energy Consumption Visualizations</h3>
                   <p class="info"><em class="date">June 2017</em></p>
 
                   <p>
@@ -537,9 +537,9 @@
                     Collaborated with Aniss Bakhshi, Manohar Boppana, and Mathew Le.
                     Data courtesy of U.S. Government, downloaded from <a href="https://www.kaggle.com/lislejoem/us_energy_census_gdp_10-14/home">Kaggle</a>.
                   </p>
-                  <p>
+                  <!-- <p>
                     <a href="https://maythird.ddns.net/d3project/">Click here to view!</a>
-                  </p>
+                  </p> -->
 <!--                  <p><a href="https://github.com/kerbinlee/">View Source Code on GitHub</a></p>-->
 
                </div>
